--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 }
 
 .container {
-    background: url('../img/bg.avif') no-repeat;
-    background-size: 100vw;
+    background: url(../img/bg.avif) no-repeat;
+    background-size: cover;
     height: 100vh;
     display: flex;
     flex-direction: column;
