--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,10 @@
 }
 
 .container {
+    min-height: 100vh;
     background: url(../img/bg.avif) no-repeat;
     background-size: cover;
-    height: 100vh;
+    background-position: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,9 +20,11 @@
 
 .bloco{
     width: 70%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 16px;
+    margin: 16px;
 }
 
 .perguntaId{
@@ -33,11 +36,14 @@
     color: #fe5f55;
 }
 
+.resposta{
+    height: 100%;
+}
+
 .botao{
     display: flex;
-    width: 20%;
+    width: 0%;
     align-self: center;
-    margin-top: 64px;
     padding: 10px 72px;
     justify-content: center;
     background-color: transparent;
@@ -51,4 +57,12 @@
     cursor: pointer;
     transition: 0.5s;
     font-weight: bold;
+}
+.botao__next{
+    font-size: 24px;
+    margin-top: 32px;
+}
+
+.botao__next i:hover{
+    color: #9300B3;   
 }
